# python-packages

./: .gitignore
package1/: pyproject.toml
package1/package1/: __init__.py
package1/src/package1/: main.py
package2/: pyproject.toml
package2/package2/: main.py
package2/src/package2/: main.py
